[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.0",
]
