[project]
name = "ab-test-calculator-pro"
version = "2.0.0"
description = "Professional A/B Test Sample Size Calculator with AI-powered insights"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "streamlit>=1.52.0",
    "supabase>=2.10.0",
]
